# ec_car_detection

./: .gitignore  .gitmodules  CMakeLists.txt  data.json
src/: CMakeLists.txt
src/code/: main.cpp
src/code/controllers/: TestBedController.h
src/code/sensors/: ImuSimulatorSensor.h  OpencvCameraSensor.h  OpencvImageFileSensor.h  OpencvSensor.h  OpencvVideoSensor.h
src/code/tasks/: CarParticleFilter.cpp  CarParticleFilter.h  DetectionTask.h  DetectionTask.inl
src/code/tasks/visualization/: Map.cpp  Map.h
tools/: CMakeLists.txt
tools/datasetGen/: CMakeLists.txt  main.cpp
tools/testing/: CMakeLists.txt  main.cpp
tools/training/: CMakeLists.txt  main.cpp
